# Domora

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  package-lock.json  package.json  server.js
backend/backend/: .env
backend/config/: db.js  passport.js
backend/middleware/: auth.js  rateLimit.js  roleCheck.js  upload.js  validate.js
backend/models/: KYC.js  Lead.js  Message.js  Negotiation.js  Notification.js  Property.js  User.js  Visit.js
backend/routes/: admin.js  ai.js  auth.js  chat.js  kyc.js  leads.js  negotiation.js  property.js  user.js  visit.js
backend/services/: fraudDetection.js
backend/socket/: chatHandler.js
backend/utils/: areaData.js
frontend/: .env  .env.local.example  Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIChat.tsx  AreaInsights.tsx  InvestmentCalculator.tsx  LeadForm.tsx  Navbar.tsx  NegotiationModal.tsx  PropertyCard.tsx  PropertyFilters.tsx  PropertyMap.tsx  ScheduleVisit.tsx  WalletProvider.tsx
frontend/frontend/: .env
frontend/hooks/: useSocket.ts
frontend/lib/: api.ts  constants.ts  utils.ts
frontend/store/: authStore.ts
frontend/types/: index.ts
shared/types/: index.ts
shared/utils/: constants.ts  formatters.ts
solana/: Anchor.toml
solana/app/: deploy.ts  package-lock.json  (+1 more)
solana/programs/real_estate/: Cargo.toml
solana/programs/real_estate/src/: lib.rs
(+157 files in other folders)
