[package]
name = "real_estate"
version = "0.1.0"
description = "Surat Real Estate Smart Contract on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "real_estate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
